--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   charts_flutter_new: ^0.12.0
   lite_rolling_switch: ^1.0.0
   scroll_snap_list: ^0.9.1
+  get_storage: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
