--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
    <application
-        android:label="flutter_winged"
+        android:label="Winged"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
