--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,22 +31,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   cloud_firestore: ^4.0.5
   firebase_auth: ^4.1.2
   firebase_core: ^2.2.0
   pin_code_fields: ^7.4.0
-  smooth_page_indicator: 1.0.0+2
+  smooth_page_indicator: ^1.1.0
   firebase_analytics: ^10.0.5
   pinput: ^2.2.16
   firebase_database: ^10.0.6
   fluttertoast: ^8.1.1
   get: ^4.6.5
-  google_maps_flutter: ^2.2.1
+  google_maps_flutter: ^2.3.0
   location: ^4.4.0
   geolocator: ^9.0.2
-  flutter_svg: ^1.1.6
-  http: ^0.13.5
+  flutter_svg: ^2.0.6
+  http: '>=0.13.1 <2.0.0'
   flutter_google_places: ^0.3.0
   google_place: ^0.4.7
   flutter_polyline_points: ^1.0.0
@@ -55,6 +55,7 @@ dependencies:
   scroll_snap_list: ^0.9.1
   get_storage: ^2.1.1
   url_launcher: ^6.1.10
+  flutter_rating_bar: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
